# scixtracercpp

./: CMakeLists.txt  README.md
cmake/: scixtracercppBuild.cmake  scixtracercppConfig.cmake.in  scixtracercppDependencies.cmake  scixtracercppSetTestEnvironment.cmake.in  scixtracercppUse.cmake.in  sxBuild.cmake  sxConfig.cmake.in  sxDependencies.cmake  sxSetTestEnvironment.cmake.in  sxUse.cmake.in
include/: scixtracer
src/: CMakeLists.txt  SxContainer.cpp  SxContainer.h  SxData.cpp  SxData.h  SxDataset.cpp  SxDataset.h  SxDate.cpp  SxDate.h  SxException.h  SxExperiment.cpp  SxExperiment.h  SxFormat.cpp  SxFormat.h  SxLog.cpp  SxLog.h  SxLogFile.cpp  SxLogFile.h  SxLogTerminal.cpp  SxLogTerminal.h  SxMetadata.cpp  SxMetadata.h  SxObject.cpp  SxObject.h  SxProcessedData.cpp  SxProcessedData.h  SxRawData.cpp  SxRawData.h  SxRequest.cpp  SxRequest.h  SxRequestLocal.cpp  SxRequestLocal.h  SxRun.cpp  SxRun.h  SxSearch.cpp  SxSearch.h  SxSearchContainer.cpp  SxSearchContainer.h  SxSerialize.cpp  SxSerialize.h  (+10 more)
tests/: CMakeLists.txt  CreateMetadata.cpp  CreateMetadata.h  SxCompare.cpp  SxCompare.h  SxTestConfig.h.in  TestSxData.cpp  TestSxObject.cpp  TestSxRequest.cpp  TestSxRequestLocal.cpp
tests/test_metadata_local/: experiment.md.json
tests/test_metadata_local/data/: population1_001.md.json  rawdataset.md.json
tests/test_metadata_local/process1/: population1_001_o.md.json
